--- a/Project.toml
+++ b/Project.toml
@@ -10,3 +10,7 @@ Optim = "429524aa-4258-5aef-a3af-852621145aeb"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 QuadGK = "1fd47b50-473d-5c70-9696-f719f8f3bcdc"
 QuantEcon = "fcd29c91-0bd7-5a09-975d-7ac3f643a60c"
+
+[compat]
+julia = "=1.11.6"
+
