--- a/Project.toml
+++ b/Project.toml
@@ -1,3 +1,9 @@
+name = "ThesisProject"
+uuid = "12345678-abcd-ef00-1234-56789abcdef0"
+authors = ["Matthieu Grenier <matthieu.grenier@ensae.fr>"]
+version = "0.1.0"
+
+
 [deps]
 BenchmarkTools = "6e4b80f9-dd63-53aa-95a3-0cdb28fa8baf"
 CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
@@ -24,3 +30,4 @@ YAML = "ddb6d928-2868-570f-bddf-ab3f9cf99eb6"
 
 [compat]
 julia = "=1.11.6"
+
