--- a/Project.toml
+++ b/Project.toml
@@ -25,6 +25,7 @@ QuantEcon = "fcd29c91-0bd7-5a09-975d-7ac3f643a60c"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 SpecialFunctions = "276daf66-3868-5448-9aa4-cd146d93841b"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
+StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 StatsPlots = "f3b207a7-027a-5e70-b257-86293d7955fd"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 UUIDs = "cf7118a7-6976-5b1a-9a39-7adc72f591a4"
@@ -35,5 +36,6 @@ CSV = "0.10.15"
 DataFrames = "1.7.0"
 ProgressMeter = "1.10.4"
 SpecialFunctions = "2.5.1"
+StatsBase = "0.34.6"
 StatsPlots = "0.15.7"
 julia = "=1.11.6"
