--- a/Project.toml
+++ b/Project.toml
@@ -24,6 +24,7 @@ QuadGK = "1fd47b50-473d-5c70-9696-f719f8f3bcdc"
 QuantEcon = "fcd29c91-0bd7-5a09-975d-7ac3f643a60c"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 SpecialFunctions = "276daf66-3868-5448-9aa4-cd146d93841b"
+StableRNGs = "860ef19b-820b-49d6-a774-d7a799459cd3"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 StatsPlots = "f3b207a7-027a-5e70-b257-86293d7955fd"
@@ -36,6 +37,7 @@ CSV = "0.10.15"
 DataFrames = "1.7.0"
 ProgressMeter = "1.10.4"
 SpecialFunctions = "2.5.1"
+StableRNGs = "1.0.3"
 StatsBase = "0.34.6"
 StatsPlots = "0.15.7"
 julia = "=1.11.6"
