--- a/Project.toml
+++ b/Project.toml
@@ -12,6 +12,7 @@ ProgressMeter = "92933f4c-e287-5a05-a399-4b506db050ca"
 SpecialFunctions = "276daf66-3868-5448-9aa4-cd146d93841b"
 StableRNGs = "860ef19b-820b-49d6-a774-d7a799459cd3"
 StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
+Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 UUIDs = "cf7118a7-6976-5b1a-9a39-7adc72f591a4"
 YAML = "ddb6d928-2868-570f-bddf-ab3f9cf99eb6"
 
@@ -22,4 +23,5 @@ ProgressMeter = "1.10.4"
 SpecialFunctions = "2.5.1"
 StableRNGs = "1.0.3"
 StatsBase = "0.34.6"
+Test = "1.11.0"
 julia = "=1.11.6"
