Add plotting functionality and extend visualization API. Plotting is an extension of ThesisProject, meaning that if not needed, do not use `using Plots`.
- Introduced `plot_policy` function for visualizing policy functions. Not implemented yet.

- Added `plot_euler_error` function for visualizing Euler errors. To be reworked.

#### Plot extension :
- Updated Project.toml to include Plots as a weak dependency.
- Created ThesisProjectPlotsExt module for extended plotting capabilities.
- Refactored existing API to support new plotting functions.

TBDN : Rework the plot funs to be API compatible, add fun to plot the value.

--- a/Project.toml
+++ b/Project.toml
@@ -29,3 +29,9 @@ StableRNGs = "1.0.3"
 StatsBase = "0.34.6"
 Test = "1.11.0"
 julia = "=1.11.6"
+
+[weakdeps]
+Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
+
+[extensions]
+ThesisProjectPlotsExt = ["Plots"]
