Fix plotting discrepancies.
- Changed the structure of the plot extension to be usable only when Plots are compiled.

-Implemented a stable plot_policy, that plots the optimal policy from a fun and a grid (currently only a_grid)

TBDN : Same with VF and EE errors.

--- a/config/simple_baseline.yaml
+++ b/config/simple_baseline.yaml
@@ -15,12 +15,7 @@ grids:
   a_max: 20.0
 
 shocks:
-  active: true
-  ρ_shock: 0.95
-  σ_shock: 0.10
-  Nz : 11
-  method : rouwenhorst
-  m : 3.0
+  active: false
 
 utility:
   u_type: CRRA
