--- a/Project.toml
+++ b/Project.toml
@@ -1,34 +1,24 @@
 name = "ThesisProject"
 uuid = "12345678-abcd-ef00-1234-56789abcdef0"
 authors = ["Matthieu Grenier <matthieu.grenier@ensae.fr>"]
-version = "0.1.0"
+version = "1.0.0"
 
 [deps]
-CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
-DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
-Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
 JSON3 = "0f8b85d8-7281-11e9-16c2-39a750bddbf1"
-LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
-ProgressMeter = "92933f4c-e287-5a05-a399-4b506db050ca"
 SHA = "ea8e919c-243c-51af-8825-aaa63cd721ce"
 SpecialFunctions = "276daf66-3868-5448-9aa4-cd146d93841b"
 StableRNGs = "860ef19b-820b-49d6-a774-d7a799459cd3"
-StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
-Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
-UUIDs = "cf7118a7-6976-5b1a-9a39-7adc72f591a4"
 YAML = "ddb6d928-2868-570f-bddf-ab3f9cf99eb6"
 
 [compat]
-CSV = "0.10.15"
-DataFrames = "1.7.0"
 JSON3 = "1.14.3"
-ProgressMeter = "1.10.4"
 SHA = "0.7.0"
 SpecialFunctions = "2.5.1"
 StableRNGs = "1.0.3"
-StatsBase = "0.34.6"
-Test = "1.11.0"
 julia = "=1.11.6"
+YAML = "0.4.14"
+Plots = "1"
+Test = "1.11.0"
 
 [weakdeps]
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
