--- a/Project.toml
+++ b/Project.toml
@@ -9,6 +9,7 @@ SHA = "ea8e919c-243c-51af-8825-aaa63cd721ce"
 SpecialFunctions = "276daf66-3868-5448-9aa4-cd146d93841b"
 StableRNGs = "860ef19b-820b-49d6-a774-d7a799459cd3"
 YAML = "ddb6d928-2868-570f-bddf-ab3f9cf99eb6"
+Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 
 [compat]
 JSON3 = "1.14.3"
