--- a/Project.toml
+++ b/Project.toml
@@ -13,6 +13,7 @@ Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 
 [compat]
 JSON3 = "1.14.3"
+Random = "1.11.0"
 SHA = "0.7.0"
 SpecialFunctions = "2.5.1"
 StableRNGs = "1.0.3"
