--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        julia-version: [ '1.10', '1.11' ]
+        julia-version: ['1.11.4']
     steps:
       - uses: actions/checkout@v4
       - uses: julia-actions/setup-julia@v2
