--- a/Project.toml
+++ b/Project.toml
@@ -5,22 +5,13 @@ version = "1.0.0"
 
 [deps]
 JSON3 = "0f8b85d8-7281-11e9-16c2-39a750bddbf1"
+Logging = "56ddb016-857b-54e1-b83d-db4d58db5568"
+Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 SHA = "ea8e919c-243c-51af-8825-aaa63cd721ce"
 SpecialFunctions = "276daf66-3868-5448-9aa4-cd146d93841b"
 StableRNGs = "860ef19b-820b-49d6-a774-d7a799459cd3"
+Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 YAML = "ddb6d928-2868-570f-bddf-ab3f9cf99eb6"
-Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
-
-[compat]
-JSON3 = "1.14.3"
-Random = "1.11.0"
-SHA = "0.7.0"
-SpecialFunctions = "2.5.1"
-StableRNGs = "1.0.3"
-julia = "=1.11.6"
-YAML = "0.4.14"
-Plots = "1"
-Test = "1.11.0"
 
 [weakdeps]
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
@@ -28,9 +19,22 @@ Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 [extensions]
 ThesisProjectPlotsExt = ["Plots"]
 
+[compat]
+JSON3 = "1.14.3"
+Logging = "1.11.0"
+Plots = "1"
+Random = "1.11.0"
+SHA = "0.7.0"
+SpecialFunctions = "2.5.1"
+StableRNGs = "1.0.3"
+Statistics = "1.11.1"
+Test = "1.11.0"
+YAML = "0.4.14"
+julia = "=1.11.6"
+
 [extras]
-Test  = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
+Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [targets]
 test = ["Test", "Plots"]
