--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,9 +17,9 @@ jobs:
         with:
           version: ${{ matrix.julia-version }}
       - name: Instantiate
-        run: julia -e 'using Pkg; Pkg.instantiate()'
+        run: julia -- project -e 'using Pkg; Pkg.instantiate()'
       - name: Run tests
-        run: julia -e 'using Pkg; Pkg.test("ThesisProject")'
+        run: julia --project -e 'using Pkg; Pkg.test()'
       - name: Smoke (deterministic and stochastic)
         run: |
           julia scripts/smoke.jl
