--- a/Project.toml
+++ b/Project.toml
@@ -5,6 +5,7 @@ version = "1.0.0"
 
 [deps]
 JSON3 = "0f8b85d8-7281-11e9-16c2-39a750bddbf1"
+JuliaFormatter = "98e50ef6-434e-11e9-1051-2b60c6c9e899"
 Logging = "56ddb016-857b-54e1-b83d-db4d58db5568"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 SHA = "ea8e919c-243c-51af-8825-aaa63cd721ce"
@@ -21,6 +22,7 @@ ThesisProjectPlotsExt = ["Plots"]
 
 [compat]
 JSON3 = "1.14.3"
+JuliaFormatter = "2.1.6"
 Logging = "1.11.0"
 Plots = "1"
 Random = "1.11.0"
@@ -33,6 +35,7 @@ YAML = "0.4.14"
 julia = "=1.11.6"
 
 [extras]
+JuliaFormatter = "98e50ef6-9231-59e6-9c89-5317c44b948d"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
