--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,14 +16,18 @@ jobs:
       - uses: actions/setup-python@v5
         with:
           python-version: '3.x'
-      - run: pip install pre-commit
-      - name: Run pre-commit
-        run: pre-commit run --show-diff-on-failure --files $(git ls-files '*.jl')
+      - run: pip install --upgrade pip pre-commit
       - uses: julia-actions/setup-julia@v2
         with:
           version: ${{ matrix.julia-version }}
       - name: Instantiate
         run: julia --project=. -e 'using Pkg; Pkg.instantiate()'
+      - name: Verify JuliaFormatter is available
+        run: julia --project=. -e 'using JuliaFormatter; println("JuliaFormatter OK")'
+      - name: Run pre-commit
+        env:
+          JULIA_PROJECT: .
+        run: pre-commit run --show-diff-on-failure --files $(git ls-files "*.jl")
       - name: Run tests
         run: julia --project=. -e 'using Pkg; Pkg.test()'
       - name: Smoke (deterministic and stochastic)
