Add a script to run the baseline stoch model, with 2 grids. Changed the CI to compute coverage under the right environment. Changed the simple_sotchastic config file to match the new notations.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,7 +45,7 @@ jobs:
 
       - name: Check coverage
         run: |
-          julia -e '
+          julia --project=. -e '
             using Pkg
             Pkg.add("Coverage")
             using Coverage
