--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,7 +39,7 @@ jobs:
         run: julia --project=. -e 'using Pkg; Pkg.test()'
 
       - name: Run tests with coverage
-        run: julia -e 'using Pkg; Pkg.test(coverage=true)'
+        run: julia --project=. -e 'using Pkg; Pkg.test(coverage=true)'
       - name: Generate coverage report
         uses: julia-actions/julia-processcoverage@v1
 
