Included the repo token in the CI (stored as a secret variable)

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -62,6 +62,7 @@ jobs:
         with:
           files: lcov.info
           fail_ci_if_error: true
+          token : ${{ secrets.CODECOV_TOKEN }}
 
       - name: Smoke (deterministic and stochastic)
         run: julia --project=. scripts/smoke.jl
