--- a/Project.toml
+++ b/Project.toml
@@ -37,8 +37,9 @@ YAML = "0.4.14"
 julia = "=1.11.6"
 
 [extras]
+Coverage = "a2441757-f6aa-5fb2-8edb-039e3f45d037"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [targets]
-test = ["Test", "Plots"]
+test = ["Test", "Plots", "Coverage"]
