--- a/Project.toml
+++ b/Project.toml
@@ -1,13 +1,11 @@
 name = "ThesisProject"
 uuid = "12345678-abcd-ef00-1234-56789abcdef0"
 authors = ["Matthieu Grenier <matthieu.grenier@ensae.fr>"]
-version = "1.0.0"
+version = "0.1.0"
 
 [deps]
 JSON3 = "0f8b85d8-7281-11e9-16c2-39a750bddbf1"
-JuliaFormatter = "98e50ef6-434e-11e9-1051-2b60c6c9e899"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
-Logging = "56ddb016-857b-54e1-b83d-db4d58db5568"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 SHA = "ea8e919c-243c-51af-8825-aaa63cd721ce"
 SpecialFunctions = "276daf66-3868-5448-9aa4-cd146d93841b"
@@ -23,9 +21,7 @@ ThesisProjectPlotsExt = ["Plots"]
 
 [compat]
 JSON3 = "1.14.3"
-JuliaFormatter = "2.1.6"
 LinearAlgebra = "1.11.0"
-Logging = "1.11.0"
 Plots = "1"
 Random = "1.11.0"
 SHA = "0.7.0"
@@ -35,6 +31,7 @@ Statistics = "1.11.1"
 Test = "1.11.0"
 YAML = "0.4.14"
 julia = "=1.11.6"
+Coverage ="1"
 
 [extras]
 Coverage = "a2441757-f6aa-5fb2-8edb-039e3f45d037"
