--- a/Project.toml
+++ b/Project.toml
@@ -12,6 +12,7 @@ SpecialFunctions = "276daf66-3868-5448-9aa4-cd146d93841b"
 StableRNGs = "860ef19b-820b-49d6-a774-d7a799459cd3"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 YAML = "ddb6d928-2868-570f-bddf-ab3f9cf99eb6"
+ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
 
 [weakdeps]
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
@@ -32,6 +33,7 @@ Test = "1.11.0"
 YAML = "0.4.14"
 julia = "=1.11.6"
 Coverage ="1"
+ForwardDiff = "0.10"
 
 [extras]
 Coverage = "a2441757-f6aa-5fb2-8edb-039e3f45d037"
