Enhance coverage reporting and expand testing suite for NN loss functions
- Added functionality to load ignore patterns from Codecov configuration in coverage_report.jl.
- Implemented glob-to-regex conversion for filtering ignored files in coverage reports.
- Refactored tests in 	est_loss.jl to focus on basic loss utilities and added checks for stabilization methods.
- Introduced new test files for constraints and evaluation, including 	est_constraints.jl, 	est_constraints_extras.jl, 	est_eval.jl, and 	est_loss_extras.jl.
- Expanded testing coverage for NN loss functions, including additional checks for residuals, penalties, and edge cases.
- Added tests for new projection methods and ensured proper handling of various input shapes and types.
- Verified finiteness of residuals in both deterministic and stochastic settings.

--- a/.codecov.yml
+++ b/.codecov.yml
@@ -1,3 +1,9 @@
 ignore:
   - "scripts/**"
   - "**/scripts/**"
+  # Exclude plotting helpers (manual/visual only)
+  - "src/viz/**"
+  # Exclude lightweight API stubs/entry shims
+  - "src/ThesisProject.jl"
+  - "src/viz/api.jl"
+  - "src/core/model_contract.jl"
