--- a/Project.toml
+++ b/Project.toml
@@ -1,23 +1,24 @@
 name = "ThesisProject"
-uuid = "12345678-abcd-ef00-1234-56789abcdef0"
+uuid = "858fd8f9-c2bb-462a-9462-edbfec3d0185"
 authors = ["Matthieu Grenier <matthieu.grenier@ensae.fr>"]
 version = "0.4.0"
 
 [deps]
 ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
 JSON3 = "0f8b85d8-7281-11e9-16c2-39a750bddbf1"
-LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Lux = "b2108857-7c20-44ae-9111-449ecde12c47"
 Optimisers = "3bd65402-5787-11e9-1adc-39752487f4e2"
-Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
-SHA = "ea8e919c-243c-51af-8825-aaa63cd721ce"
 SpecialFunctions = "276daf66-3868-5448-9aa4-cd146d93841b"
 StableRNGs = "860ef19b-820b-49d6-a774-d7a799459cd3"
-Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
-Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
-Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
+PrecompileTools = "aea7be01-6a6a-4083-8856-8a6e6704d82a"
 YAML = "ddb6d928-2868-570f-bddf-ab3f9cf99eb6"
 Zygote = "e88e6eb3-aa80-5325-afca-941959d7151f"
+Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
+LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
+Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
+Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
+SHA = "ea8e919c-243c-51af-8825-aaa63cd721ce"
 
 [weakdeps]
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
@@ -28,20 +29,17 @@ ThesisProjectPlotsExt = ["Plots"]
 [compat]
 Coverage = "1"
 ForwardDiff = "0.10"
-JSON3 = "1.14.3"
-LinearAlgebra = "1.11.0"
+JSON3 = "1"
+Lux = "1.21"
+Optimisers = "0.4"
 Plots = "1"
-Random = "1.11.0"
-SHA = "0.7.0"
-SpecialFunctions = "2.5.1"
-StableRNGs = "1.0.3"
-Statistics = "1.11.1"
-Test = "1.11.0"
-YAML = "0.4.14"
-Zygote = "0.7.10"
-Dates = "1.11.0"
-Printf = "1.11.0"
-julia = "=1.11.6"
+PrecompileTools = "1"
+SpecialFunctions = "2"
+StableRNGs = "1"
+SHA = "0.7"
+YAML = "0.4"
+Zygote = "0.7"
+julia = "1.11"
 
 [extras]
 Coverage = "a2441757-f6aa-5fb2-8edb-039e3f45d037"
