Change ASCII characters to Unicode. Checked for any occurence, and ensured code consistency. Encoding is in UTF-8.

--- a/config/nn_stochastic.yaml
+++ b/config/nn_stochastic.yaml
@@ -32,9 +32,10 @@ solver:
   stabilize: true
   stab_method: log1p_square
   residual_weighting: none
-  weight_alpha: 5.0
-  weight_kappa: 20.0
+  weight_α: 5.0
+  weight_κ: 20.0
 
 random:
   seed: 1234
+
 
