--- a/Project.toml
+++ b/Project.toml
@@ -4,21 +4,22 @@ authors = ["Matthieu Grenier <matthieu.grenier@ensae.fr>"]
 version = "0.4.0"
 
 [deps]
+CUDA = "052768ef-5323-5732-b1bb-66c8b64840ba"
+Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
 ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
 JSON3 = "0f8b85d8-7281-11e9-16c2-39a750bddbf1"
+LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Lux = "b2108857-7c20-44ae-9111-449ecde12c47"
 Optimisers = "3bd65402-5787-11e9-1adc-39752487f4e2"
-SpecialFunctions = "276daf66-3868-5448-9aa4-cd146d93841b"
-StableRNGs = "860ef19b-820b-49d6-a774-d7a799459cd3"
 PrecompileTools = "aea7be01-6a6a-4083-8856-8a6e6704d82a"
-YAML = "ddb6d928-2868-570f-bddf-ab3f9cf99eb6"
-Zygote = "e88e6eb3-aa80-5325-afca-941959d7151f"
-Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
-LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
-Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 SHA = "ea8e919c-243c-51af-8825-aaa63cd721ce"
+SpecialFunctions = "276daf66-3868-5448-9aa4-cd146d93841b"
+StableRNGs = "860ef19b-820b-49d6-a774-d7a799459cd3"
+Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
+YAML = "ddb6d928-2868-570f-bddf-ab3f9cf99eb6"
+Zygote = "e88e6eb3-aa80-5325-afca-941959d7151f"
 
 [weakdeps]
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
@@ -27,6 +28,7 @@ Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 ThesisProjectPlotsExt = ["Plots"]
 
 [compat]
+CUDA = "5.8.3"
 Coverage = "1"
 ForwardDiff = "0.10"
 JSON3 = "1"
@@ -34,9 +36,9 @@ Lux = "1.21"
 Optimisers = "0.4"
 Plots = "1"
 PrecompileTools = "1"
+SHA = "0.7"
 SpecialFunctions = "2"
 StableRNGs = "1"
-SHA = "0.7"
 YAML = "0.4"
 Zygote = "0.7"
 julia = "1.11"
