Add neural network solver and related configurations
- Updated Project.toml to include Revise as an extra dependency.
- Modified nn_deterministic.yaml and nn_stochastic.yaml to use string values for method and projection_kind.
- Included data_nn.jl in ThesisProject.jl for neural network data handling.
- Refactored NN.jl to streamline the neural network solving process, integrating Lux for model training.
- Enhanced EulerResiduals.jl to improve residual calculations for deterministic and stochastic models.
- Updated kernel.jl files for perturbation and projection solvers to utilize new residual functions.
- Created run_nn.jl script for executing the neural network model.
- Introduced data generation functionality in data_nn.jl for training the neural network.

--- a/config/nn_stochastic.yaml
+++ b/config/nn_stochastic.yaml
@@ -16,7 +16,7 @@ shocks:
   active: true
   method: "rouwenhorst"   # or "tauchen"
   ρ_shock: 0.9            # ASCII alias accepted in validator
-  s_shock: 0.10           # ASCII alias accepted in validator
+  σ_shock: 0.10           # ASCII alias accepted in validator
   Nz: 7
   validate: true
 
