--- a/config/nn_deterministic.yaml
+++ b/config/nn_deterministic.yaml
@@ -19,14 +19,14 @@ utility:
   u_type: CRRA
 
 solver:
-  method: NN
+  method: "NN"
   epochs: 5
   batch: 128
   lr: 1.0e-3
-  projection_kind: softplus
+  projection_kind: "softplus"
   stabilize: true
-  stab_method: log1p_square
-  residual_weighting: none
+  stab_method: "log1p_square"
+  residual_weighting: "none"
   weight_α: 5.0
   weight_κ: 20.0
 
