--- a/config/nn_stochastic.yaml
+++ b/config/nn_stochastic.yaml
@@ -26,8 +26,10 @@ utility:
 solver:
   method: NN
   epochs: 5
-  batch: 128
+  batch: 64
   lr: 1.0e-3
+  hid1: 64
+  hid2: 64
   projection_kind: softplus
   stabilize: true
   stab_method: log1p_square
